# rosmc_interface_msgs

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
msg/: Action.msg  ActionContent.msg  ActionStatus.msg  AgentActions.msg  AgentStatus.msg  SyncIDs.msg
scripts/: advertise_fake_mcg_services.py
src/rosmc_interface_msgs/: mission_utils.py
srv/: Mission.srv  RegisterToServer.srv  TriggerMissionExecutor.srv  UpdateActionStatus.srv
