<?xml version="1.0"?>
<package>
  <name>rosmc_interface_msgs</name>
  <version>1.1.4</version>
  <description>
    The package for the high-level interfaces between ROSMC and mission executors.
  </description>
  <maintainer email="Ryo.Sakagami@dlr.de">Ryo Sakagami</maintainer>
  <author email="Ryo.Sakagami@dlr.de">Ryo Sakagami</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>
</package>
